--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "username",
-    "password": "password",
-    "database": "database",
+    "username": "root",
+    "password": "Wiwi2017",
+    "database": "weku_dev",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
